[gd_scene load_steps=13 format=3 uid="uid://dxni2blqdsqc2"]

[ext_resource type="Script" uid="uid://cw3kbuwuhxijv" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://crd2follmab1j" path="res://ball.tscn" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://g1068o2ypp1a" path="res://player_1.gd" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://ggcw3vbcpmvm" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://bf1so1d0gm806" path="res://player_2.gd" id="5_lquwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(1154, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(20, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(20, 650)

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 576, 64, 0, 0, 0, 0, 576, 576)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(16, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(16, 64)

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")
ball_scene = ExtResource("2_0xm2m")
max_score = 2

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, -8)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(576, 0)
shape = SubResource("RectangleShape2D_ig7tw")

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(8, 656)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(567, 0)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="Left" type="Area2D" parent="."]
position = Vector2(-8, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(0, 324)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Right" type="Area2D" parent="."]
position = Vector2(1160, 8)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(0, 315)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="BallPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ig7tw")

[node name="BallSpawnLocation" type="PathFollow2D" parent="BallPath"]
position = Vector2(576, 64)
rotation = 1.5708

[node name="Player1" type="CharacterBody2D" parent="."]
position = Vector2(72, 328)
motion_mode = 1
script = ExtResource("3_h2yge")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player1"]
offset_left = -8.0
offset_top = -36.0
offset_right = 8.0
offset_bottom = 28.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_lquwl")

[node name="Player2" type="CharacterBody2D" parent="."]
position = Vector2(1080, 323)
script = ExtResource("5_lquwl")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player2"]
offset_left = -8.0
offset_top = -32.0
offset_right = 8.0
offset_bottom = 32.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("RectangleShape2D_7mycd")

[node name="BallTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
